--- a/style.css
+++ b/style.css
@@ -29,13 +29,29 @@
   --weight-regular: 400;
 
   /* Size */ 
+  --size-border-radius: 4px;
 }
 
-/* Unisersal tags*/
+/* Universal tags*/
 *{
   box-sizing: border-box;
 }
 
+body{
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  cursor: default;
+}
+
+a{
+  text-decoration: none;
+  color: var(--color-white);
+}
+
+ul{
+  list-style: none;
+  padding-left: 0;
+}
 /*Typography*/
 h1 {
   font-size: var(--font-large);
@@ -60,4 +76,36 @@ p{
   font-weight: var(--font-regular);
   color:var(--color-black);
   margin: 4px 0px;
+}
+
+/* Navbar */
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--color-pink);
+  align-items: center;
+  color: var(--color-white);
+  padding: 16px;
+}
+
+.navbar_menu{
+  display: flex;
+
+}
+.navbar_logo{
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+}
+.navbar_menu_items{
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border-radius: var(--size-border-radius);
+}
+.navbar_menu_items.active{
+  border: 1px solid var(--color-white);
+}
+.navbar_menu_items:hover{
+  background-color: var(--color-dark-pink);
+
 }
