--- a/style.css
+++ b/style.css
@@ -30,7 +30,11 @@
 
   /* Size */ 
   --size-border-radius: 4px;
-}
+
+  /* Animation */
+  --animation-duration : 300ms;
+  }
+
 
 /* Universal tags*/
 *{
@@ -145,4 +149,65 @@ p{
   padding: 8px 12px;
   border: 2px solid var(--color-white);
   border-radius: var(--size-border-radius);
+}
+
+/* Section common */
+.section{
+  text-align: center;
+  padding: 50px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+/* About */
+.about_majors{
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0px;
+}
+.major_icon{
+  width: 170px;
+  height: 170px;
+  line-height: 170px;
+  font-size: 70px;
+  margin: auto;
+  color: #D8E8F2;
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  margin-bottom: 16px;
+}
+.major_icon i{
+transition: var(--animation-duration);
+}
+
+.major_icon:hover{
+  color: pink;
+  transform: rotate(-30deg) scale(1.1);
+}
+.major_title,
+.major_description{
+  color: var(--color-dark-grey);
+}
+
+.major_description{
+  font-size: var(--font-small);
+}
+.job{
+  display: flex;
+  align-items: center;
+}
+.major_description{
+  margin: 0 8px;
+  text-align: left;
+}
+.job_name,
+.job_period{
+  color: var(--color-dark-grey);
+}
+.job_name{
+  font-size: var(--font-small);
+  margin-bottom: auto;
+}
+.job_period{
+  font-size: var(--font-micro);
 }
