--- a/style.css
+++ b/style.css
@@ -155,10 +155,13 @@ p{
 .section{
   text-align: center;
   padding: 50px;
-  max-width: 1200px;
   margin: auto;
 }
 
+.section_container{
+  max-width: 1200px;
+  margin: auto;
+}
 /* About */
 .about_majors{
   display: flex;
@@ -210,4 +213,54 @@ transition: var(--animation-duration);
 }
 .job_period{
   font-size: var(--font-micro);
+}
+/* Skill*/
+
+#skills{
+  background-color: #F2DFE6;
+}
+
+.skillset {
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-light-white);
+  margin: 20px 0;
+}
+.skillset_title{
+  color:var(--color-white)
+}
+.skillset_left{
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px 40px;
+}
+.skill{
+  margin-bottom: 32px;
+}
+.skill_description{
+  display: flex;
+  justify-content: space-between;
+
+}
+.skill_bar{
+  width: 100%;
+  height: 3px;
+  background-color:var(--color-grey);
+}
+.skill_value{
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-orange);
+}
+.skillset_right{
+  flex-basis: 40%;
+}
+
+.tools{
+  background-color: var(--color-grey);
+}
+
+.tools,
+.etc{
+  padding: 20px;
 }
