--- a/style.css
+++ b/style.css
@@ -95,14 +95,22 @@ p{
 
 /* Navbar */
 #navbar {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-sky);
+  background-color: transparent;
   align-items: center;
   color: var(--color-white);
   padding: 16px;
+  transition: all var(--animation-duration) ease-in-out;
 }
 
+#navbar.navbar--dark{
+  background-color: var(--color-sky);
+  padding: 8px;
+
+}
 .navbar_menu{
   display: flex;
 
@@ -129,6 +137,7 @@ p{
 #home{
   background: url(images/home-background.png) center/cover no-repeat;
   padding: 40px;
+  padding-top: 120x;
   text-align: center;
 }
 .home_avatar{
@@ -165,9 +174,7 @@ p{
   margin: auto;
 }
 /* About */
-#about{
-  background-color: 
-}
+
 .about_majors{
   display: flex;
   justify-content: space-between;
