--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   --color-yellow: #fff7d1;
   --color-orange: orange;
   --color-violet: #F2DFE6;
+  --color-pink: #F2DFE6;
   --color-black: #000000;
 
 
@@ -104,11 +105,12 @@ p{
   color: var(--color-white);
   padding: 16px;
   transition: all var(--animation-duration) ease-in-out;
+  z-index: 1;
 }
 
 #navbar.navbar--dark{
-  background-color: var(--color-sky);
-  padding: 8px;
+  background-color: var(--color-violet);
+  padding: 6px;
 
 }
 .navbar_menu{
@@ -129,7 +131,7 @@ p{
   border: 1px solid var(--color-white);
 }
 .navbar_menu_items:hover{
-  background-color: var(--color-dark-sky);
+  background-color: var(--color-grey);
 
 }
 
