--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ transition: var(--animation-duration);
 
 .category_btn.active,
 .category_btn:hover{
-  background-color:var(--color-sky);
+  background-color:var(--color-light-grey);
   color: var(--color-white);
 }
 
@@ -307,11 +307,11 @@ transition: var(--animation-duration);
 }
 
 .category_count{
-  background-color: var(--color-violet);
+  background-color: var(--color-dark-sky);
   border-radius: 50%;
   color: var(--color-white);
-  width: 24px;
-  height: 24px;
+  width: 22px;
+  height: 22px;
   line-height: 24px;
   display: inline-block;
   position: relative;
@@ -321,12 +321,19 @@ transition: var(--animation-duration);
   transition: all var(--animation-duration) ease-in;
 }
 
-.work_project{
+.work_projects{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
 }
 
+.work_projects.anime-out{
+  opacity: 0.6;
+  transform: scale(0.96) translateX(40px);
+
+}
 .project{
   position: relative;
   display: flex;
@@ -336,6 +343,10 @@ transition: var(--animation-duration);
   height: 250px;
   margin: 2px; 
   background-color:var(--color-light-white);
+}
+
+.project.invisible{
+  display: none;
 }
 .project_img{
   max-width: 100%;
@@ -398,4 +409,25 @@ transition: var(--animation-duration);
   transform: scale(1.1);
   color: var(--color-violet);
   transition: all var(--animation-duration) ease-in;
+}
+
+/* Scroll */
+.arrow-up{
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 70px;
+  height: 70px;
+  font-size: 50px;
+  color: var(--color-light-grey);
+  border-radius: var(--size-border-radius);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 300ms ease-in;
+}
+
+.arrow-up.visible{
+  opacity: 1;
+  pointer-events: auto;
+  
 }
