--- a/style.css
+++ b/style.css
@@ -110,12 +110,15 @@ p{
 
 #navbar.navbar--dark{
   background-color: var(--color-violet);
-  padding: 6px;
+  padding: 8px;
 
 }
 .navbar_menu{
   display: flex;
 
+}
+.navbar_menu.open{
+  display: block; 
 }
 .navbar_logo{
   font-size: var(--font-medium);
@@ -126,15 +129,23 @@ p{
   margin: 0 4px;
   cursor: pointer;
   border-radius: var(--size-border-radius);
+  border: 1px solid transparent;
 }
-.navbar_menu_items.active{
-  border: 1px solid var(--color-white);
-}
+
 .navbar_menu_items:hover{
   background-color: var(--color-grey);
+  border: 1px solid var(--color-white);
 
 }
 
+.navbar_toggle_btn {
+  position: absolute;
+  top: 24px;
+  right: 32px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
+}
 /* Home */
 #home{
   background: url(images/home-background.png) center/cover no-repeat;
@@ -294,13 +305,13 @@ transition: var(--animation-duration);
   padding: 8px 48px;
 }
 
-.category_btn.active,
+.category_btn.selected,
 .category_btn:hover{
   background-color:var(--color-light-grey);
   color: var(--color-white);
 }
 
-.category_btn.active .category_count,
+.category_btn.selected .category_count,
 .category_btn:hover .category_count{
   opacity: 1;
   top: 0;
@@ -430,4 +441,48 @@ transition: var(--animation-duration);
   opacity: 1;
   pointer-events: auto;
   
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+  .navbar_toggle_btn {
+    display: block;
+  }
+
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: var(--color-pink);
+  }
+
+  #navbar.navbar--dark {
+    padding: 16px;
+  }
+  .navbar_menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .navbar_menu.open {
+    display: block;
+  }
+
+  .about_majors {
+    flex-direction: column;
+  }
+
+  .major {
+    margin-bottom: 38px;
+  }
+
+  .skillset {
+    flex-direction: column;
+  }
+
+  .project {
+    flex-grow: 1;
+  }
+
 }
